# HyperLiquid-Claw

./: Cargo.toml  LICENSE  README.md  foundry.toml  install.sh
contracts/: HyperClawRegistry.sol  HyperClawVault.sol
crates/hl-core/: Cargo.toml
crates/hl-core/src/: client.rs  error.rs  lib.rs  market.rs  order.rs  position.rs  ws.rs
crates/hl-risk/: Cargo.toml
crates/hl-risk/src/: coverage.rs  lib.rs  sizing.rs
crates/hl-signer/: Cargo.toml
crates/hl-signer/src/: eip712.rs  error.rs  lib.rs  wallet.rs
scripts/: setup.js
src/: main.rs
src/cmd/: hedge.rs  markets.rs  mod.rs  order.rs  positions.rs  wallet.rs
tests/: HyperClawVault.t.sol
