[workspace]
members = [
    "crates/hl-core",
    "crates/hl-signer",
    "crates/hl-risk",
    ".",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HyperLiquid-Claw Contributors"]
license = "MIT"
repository = "https://github.com/3-JonWallis1993/HyperLiquid-Claw"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ethers = { version = "2.0", features = ["rustls"] }
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
clap = { version = "4.5", features = ["derive"] }
rust_decimal = { version = "1.36", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4"] }

[package]
name = "hyperclaw"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Trading CLI for Hyperliquid perpetuals — HyperLiquid-Claw"

[[bin]]
name = "hyperclaw"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenv.workspace = true
rust_decimal.workspace = true
chrono.workspace = true
hl-core = { path = "crates/hl-core" }
hl-signer = { path = "crates/hl-signer" }
hl-risk = { path = "crates/hl-risk" }
